# opcusdb

./: .env.example  .gitignore  COMPARISON.md  CORE_SPEC.md  Cargo.toml  DESIGN.md  PLAN.md  README.md  TODO.md
assets/diagrams/: arch.mmd  crates.mmd  determinism.mmd  multiplayer.mmd  sequence.mmd
bindings/ffi/: Cargo.toml  README.md  build.sh  determinism_gate.sh
bindings/ffi/native/: Godot_OpcusdbSwarm.cs  README.md  Unity_OpcusdbSwarm.cs  opcusdb.h  verify.c
bindings/ffi/src/: lib.rs
bindings/ffi/web/: index.html  main.mjs  netcode.html  netcode.mjs  opcusdb_ffi.wasm  particles.html  particles.mjs  verify.mjs
crates/opcusdb-algebra/: Cargo.toml
crates/opcusdb-algebra/src/: crdt.rs  lattice.rs  lib.rs  reduce.rs  rga.rs
crates/opcusdb-core/: Cargo.toml
crates/opcusdb-core/src/: commands.rs  component.rs  entity.rs  fx.rs  lib.rs  query.rs  rng.rs  scheduler.rs  select.rs  spatial.rs  storage.rs  world.rs
crates/opcusdb-ecs/: Cargo.toml
crates/opcusdb-ecs/src/: lib.rs
crates/opcusdb-fsm/: Cargo.toml
crates/opcusdb-fsm/src/: lib.rs  statechart.rs
crates/opcusdb-time/: Cargo.toml
crates/opcusdb-time/src/: lib.rs  tick.rs  timeline.rs  timer.rs
demos/chatroom/: Cargo.toml  README.md
demos/chatroom/src/: lib.rs  main.rs
demos/fsm-lab/: Cargo.toml  README.md
demos/fsm-lab/src/: lib.rs  main.rs  quest.rs  record.rs
demos/giantsreach/: .gitignore  GAME.md  README.md  launch.sh
demos/giantsreach/assets/: hud_reference.html
demos/giantsreach/server/: server.js
demos/giantsreach/web/: audio.js  game.js  index.html  style.css
demos/godot-wow/: Main.gd  Main.tscn  README.md  project.godot
demos/load-test/: Cargo.toml  README.md
demos/load-test/src/: lib.rs  main.rs
demos/lockstep/: Cargo.toml
demos/lockstep/src/: lib.rs  main.rs
demos/netcode/: Cargo.toml
demos/netcode/src/: lib.rs  main.rs  net.rs  wal.rs
demos/particles/: Cargo.toml
demos/particles/src/: lib.rs
demos/server/: Cargo.toml  README.md
demos/server/src/: arena.rs  board.rs  chat.rs  gomoku.rs  lib.rs  main.rs  ow.rs  rts.rs  smash.rs  survivors.rs  td.rs  town.rs  wow.rs  ws.rs
demos/server/web/: app.js  arena.html  arena.js  audit_sprites.py  board.html  board.js  chat.html  chat.js  gomoku.html  gomoku.js  index.html  ow.html  ow.js  rts.html  rts.js  smash.html  smash.js  survivors.html  survivors.js  td.html  td.js  town.html  town.js
