[package]
name = "opcusdb-ecs"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
description = "opcusdb ECS-on-Timeline bridge: run an ECS World as a rollback-able Sim"

[lints]
workspace = true

[dependencies]
opcusdb-core = { path = "../opcusdb-core" }
opcusdb-time = { path = "../opcusdb-time" }
