[package]
name = "opcusdb-server"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
description = "opcusdb authoritative servers: a shared-world game server and a human+AI chatroom, both over a hand-rolled (dependency-free) WebSocket"

[lints]
workspace = true

[lib]
name = "opcusdb_server"
path = "src/lib.rs"

[[bin]]
name = "opcusdb-server"
path = "src/main.rs"

[[bin]]
name = "opcusdb-chat"
path = "src/chat.rs"

[[bin]]
name = "opcusdb-arena"
path = "src/arena.rs"

[[bin]]
name = "opcusdb-gomoku"
path = "src/gomoku.rs"

[[bin]]
name = "opcusdb-smash"
path = "src/smash.rs"

[[bin]]
name = "opcusdb-survivors"
path = "src/survivors.rs"

[[bin]]
name = "opcusdb-wow"
path = "src/wow.rs"

[[bin]]
name = "opcusdb-ow"
path = "src/ow.rs"

[dependencies]
opcusdb-core = { path = "../../crates/opcusdb-core" }
opcusdb-algebra = { path = "../../crates/opcusdb-algebra" }

[[bin]]
name = "opcusdb-board"
path = "src/board.rs"
